comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo do Site</title>
+    <title></title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Cursos grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dignissimos molestias delectus distinctio voluptatem provident doloremque officiis necessitatibus, nesciunt hic? Fuga magni nulla sint laborum. Fugit totam tempora dolor quod.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum est minima atque repellendus quos aut saepe veniam laborum quisquam fuga magnam blanditiis dolores ex, unde omnis voluptates dolorum porro facere?</p>
         </article>
     </main>
 </body>
